--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
-.grid-container {
+.container {
     display: flex;
     flex-wrap: wrap;
-    width: 800px;
-    height: 800px;
+    width: 100%;
+    height: 100%;
+    border: solid;
+    border-color: red;
   }
-  .grid-item {
-    width: calc(800px / 16);
-    height: calc(800px / 16);
+  .container>div {
     border: 1px solid black;
+    width: 50px;
+    height: 50px;
+  }
+  
+  .container>div:nth-child(16n + 1) {
+    width: 100%;
+
+    border: 0;
+    height: 0;
   }
